// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List should render correctly with 7 items 1`] = `
.emotion-0 {
  border-bottom: 0.0625rem solid #3F3F42;
  list-style-type: none;
  margin: 0;
  padding: 0.5rem 0;
  -webkit-column-count: 4;
  column-count: 4;
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-0 {
    display: grid;
    grid-auto-flow: column;
  }
}

@media (max-width: 14.9375rem) {
  .emotion-0 {
    grid-auto-flow: row;
    -webkit-column-count: 1;
    column-count: 1;
  }
}

@media (min-width: 15rem) and (max-width: 37.4375rem) {
  .emotion-0 {
    grid-column-gap: 0.5rem;
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: repeat(
          4,
          auto
        );
    -webkit-column-count: 2;
    column-count: 2;
  }
}

@media (min-width: 37.5rem) and (max-width: 62.9375rem) {
  .emotion-0 {
    grid-column-gap: 1rem;
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: repeat(
          3,
          auto
        );
    -webkit-column-count: 3;
    column-count: 3;
  }
}

@media (min-width: 63rem) and (max-width: 79.9375rem) {
  .emotion-0 {
    grid-column-gap: 1rem;
    grid-template-columns: repeat(4, 1fr);
    grid-template-rows: repeat(
          2,
          auto
        );
    -webkit-column-count: 4;
    column-count: 4;
  }
}

@media (min-width: 80rem) {
  .emotion-0 {
    grid-column-gap: 1rem;
    grid-template-columns: repeat(5, 1fr);
    grid-template-rows: repeat(
          2,
          auto
        );
    -webkit-column-count: 5;
    column-count: 5;
  }
}

.emotion-2 {
  min-width: 50%;
  -webkit-column-gap: 1rem;
  column-gap: 1rem;
  break-inside: avoid-column;
}

.emotion-4 {
  padding: 0.5rem 0 0.5rem;
  color: #FFFFFF;
  font-weight: 700;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: block;
}

.emotion-5:hover .emotion-6,
.emotion-5:focus .emotion-6 {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div>
  <ul
    class="emotion-0 emotion-1"
    role="list"
  >
    <li
      class="emotion-2 emotion-3"
      role="listitem"
    >
      <a
        class="emotion-4 emotion-5"
        href="https://www.bbc.co.uk/news"
      >
        <span
          class="emotion-6 emotion-7"
        >
          Link0
        </span>
      </a>
    </li>
    <li
      class="emotion-2 emotion-3"
      role="listitem"
    >
      <a
        class="emotion-4 emotion-5"
        href="https://www.bbc.co.uk/news"
      >
        <span
          class="emotion-6 emotion-7"
        >
          Link1
        </span>
      </a>
    </li>
    <li
      class="emotion-2 emotion-3"
      role="listitem"
    >
      <a
        class="emotion-4 emotion-5"
        href="https://www.bbc.co.uk/news"
      >
        <span
          class="emotion-6 emotion-7"
        >
          Link2
        </span>
      </a>
    </li>
    <li
      class="emotion-2 emotion-3"
      role="listitem"
    >
      <a
        class="emotion-4 emotion-5"
        href="https://www.bbc.co.uk/news"
      >
        <span
          class="emotion-6 emotion-7"
        >
          Link3
        </span>
      </a>
    </li>
    <li
      class="emotion-2 emotion-3"
      role="listitem"
    >
      <a
        class="emotion-4 emotion-5"
        href="https://www.bbc.co.uk/news"
      >
        <span
          class="emotion-6 emotion-7"
        >
          Link4
        </span>
      </a>
    </li>
    <li
      class="emotion-2 emotion-3"
      role="listitem"
    >
      <a
        class="emotion-4 emotion-5"
        href="https://www.bbc.co.uk/news"
      >
        <span
          class="emotion-6 emotion-7"
        >
          Link5
        </span>
      </a>
    </li>
    <li
      class="emotion-2 emotion-3"
      role="listitem"
    >
      <a
        class="emotion-4 emotion-5"
        href="https://www.bbc.co.uk/news"
      >
        <span
          class="emotion-6 emotion-7"
        >
          Link6
        </span>
      </a>
    </li>
  </ul>
</div>
`;

exports[`List should render correctly with 8 items 1`] = `
.emotion-0 {
  border-bottom: 0.0625rem solid #3F3F42;
  list-style-type: none;
  margin: 0;
  padding: 0.5rem 0;
  -webkit-column-count: 4;
  column-count: 4;
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-0 {
    display: grid;
    grid-auto-flow: column;
  }
}

@media (max-width: 14.9375rem) {
  .emotion-0 {
    grid-auto-flow: row;
    -webkit-column-count: 1;
    column-count: 1;
  }
}

@media (min-width: 15rem) and (max-width: 37.4375rem) {
  .emotion-0 {
    grid-column-gap: 0.5rem;
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: repeat(
          4,
          auto
        );
    -webkit-column-count: 2;
    column-count: 2;
  }
}

@media (min-width: 37.5rem) and (max-width: 62.9375rem) {
  .emotion-0 {
    grid-column-gap: 1rem;
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: repeat(
          3,
          auto
        );
    -webkit-column-count: 3;
    column-count: 3;
  }
}

@media (min-width: 63rem) and (max-width: 79.9375rem) {
  .emotion-0 {
    grid-column-gap: 1rem;
    grid-template-columns: repeat(4, 1fr);
    grid-template-rows: repeat(
          2,
          auto
        );
    -webkit-column-count: 4;
    column-count: 4;
  }
}

@media (min-width: 80rem) {
  .emotion-0 {
    grid-column-gap: 1rem;
    grid-template-columns: repeat(5, 1fr);
    grid-template-rows: repeat(
          2,
          auto
        );
    -webkit-column-count: 5;
    column-count: 5;
  }
}

.emotion-2 {
  min-width: 50%;
  -webkit-column-gap: 1rem;
  column-gap: 1rem;
  break-inside: avoid-column;
}

.emotion-4 {
  padding: 0.5rem 0 0.5rem;
  color: #FFFFFF;
  font-weight: 700;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: block;
}

.emotion-5:hover .emotion-6,
.emotion-5:focus .emotion-6 {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div>
  <ul
    class="emotion-0 emotion-1"
    role="list"
  >
    <li
      class="emotion-2 emotion-3"
      role="listitem"
    >
      <a
        class="emotion-4 emotion-5"
        href="https://www.bbc.co.uk/news"
      >
        <span
          class="emotion-6 emotion-7"
        >
          Link0
        </span>
      </a>
    </li>
    <li
      class="emotion-2 emotion-3"
      role="listitem"
    >
      <a
        class="emotion-4 emotion-5"
        href="https://www.bbc.co.uk/news"
      >
        <span
          class="emotion-6 emotion-7"
        >
          Link1
        </span>
      </a>
    </li>
    <li
      class="emotion-2 emotion-3"
      role="listitem"
    >
      <a
        class="emotion-4 emotion-5"
        href="https://www.bbc.co.uk/news"
      >
        <span
          class="emotion-6 emotion-7"
        >
          Link2
        </span>
      </a>
    </li>
    <li
      class="emotion-2 emotion-3"
      role="listitem"
    >
      <a
        class="emotion-4 emotion-5"
        href="https://www.bbc.co.uk/news"
      >
        <span
          class="emotion-6 emotion-7"
        >
          Link3
        </span>
      </a>
    </li>
    <li
      class="emotion-2 emotion-3"
      role="listitem"
    >
      <a
        class="emotion-4 emotion-5"
        href="https://www.bbc.co.uk/news"
      >
        <span
          class="emotion-6 emotion-7"
        >
          Link4
        </span>
      </a>
    </li>
    <li
      class="emotion-2 emotion-3"
      role="listitem"
    >
      <a
        class="emotion-4 emotion-5"
        href="https://www.bbc.co.uk/news"
      >
        <span
          class="emotion-6 emotion-7"
        >
          Link5
        </span>
      </a>
    </li>
    <li
      class="emotion-2 emotion-3"
      role="listitem"
    >
      <a
        class="emotion-4 emotion-5"
        href="https://www.bbc.co.uk/news"
      >
        <span
          class="emotion-6 emotion-7"
        >
          Link6
        </span>
      </a>
    </li>
    <li
      class="emotion-2 emotion-3"
      role="listitem"
    >
      <a
        class="emotion-4 emotion-5"
        href="https://www.bbc.co.uk/news"
      >
        <span
          class="emotion-6 emotion-7"
        >
          Link7
        </span>
      </a>
    </li>
  </ul>
</div>
`;
